--- a/package.json
+++ b/package.json
@@ -21,7 +21,12 @@
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
+    "@ngrx/core": "^1.2.0",
+    "@ngrx/effects": "^4.1.0",
+    "@ngrx/store": "^4.1.0",
     "core-js": "^2.4.1",
+    "font-awesome": "^4.7.0",
+    "primeng": "^4.3.0-rc.2",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
   },
